Fix contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,7 +288,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #45505b;
+  color: #20354b;
 }
 
 #hero p {
@@ -317,7 +317,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .social-links a:hover {
-  color: #0563bb;
+  color: #03284b;
+  font-size: 60px;
 }
 
 @media (max-width: 992px) {
@@ -390,7 +391,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #728394;
+  color: #536375;
 }
 
 .about .content ul {
@@ -411,7 +412,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #0563bb;
+  color: #aeb7c0;
   line-height: 0;
 }
 
@@ -462,7 +463,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Akills
+# Skills
 --------------------------------------------------------------*/
 .skills .progress {
   height: 60px;
@@ -487,14 +488,14 @@ section {
 }
 
 .skills .progress-bar-wrap {
-  background: #f2f3f5;
+  background: #a6b8da;
 }
 
 .skills .progress-bar {
   width: 1px;
   height: 10px;
   transition: .9s;
-  background-color: #0563bb;
+  background-color: #2767a3;
 }
 
 /*--------------------------------------------------------------
@@ -521,7 +522,7 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #0563bb;
+  color: #041f38;
   margin-bottom: 10px;
 }
 
@@ -589,7 +590,8 @@ section {
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #0563bb;
+  color: #245685;
+  font-size: 18px;
 }
 
 .portfolio #portfolio-flters li:last-child {
